Extract jwt issuer to a service, so can be accessed by password provider + build start